--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
-NODE_ENV=development
+NODE_ENV=production
 PORT=8000
-DATABASE=mongodb+srv://johnpaul:<PASSWORD>@cluster0.g9p4a.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE=mongodb+srv://paulvurizer:<PASSWORD>@library.1zu21.mongodb.net/library?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/library
-DATABASE_PASSWORD=qcOHUuoytZt0rP2P
+DATABASE_PASSWORD=E6emO2og25Pz4xkT
 JWT_SECRET=my-very-first-secret-in-json-web-token
 JWT_EXPIRES_IN=90d
 
