--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "nodemailer": "^6.6.1",
     "nodemon": "^2.0.7",
     "validator": "^13.6.0"
+  },
+  "engines": {
+    "node": "15.7.0"
   }
 }
