--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
-NODE_ENV=production
+NODE_ENV=development
 PORT=8000
 DATABASE=mongodb+srv://paulvurizer:<PASSWORD>@library.1zu21.mongodb.net/library?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/library
